--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-	<h1>Hello world</h1>
+	<h1>My homeworks</h1>
 </body>
-
+<ul>
+	<li><a href="02/index.html">Lesson 2 CV CSS</a></li>
+</ul>
 </html>
