--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<h1>My homeworks</h1>
 </body>
 <ul>
-	<li><a href="02/index.html">Lesson 2 CV CSS</a></li>
+	<li>
+		<a href="02/index.html">Lesson 2 CV CSS</a>
+	</li>
 </ul>
 </html>
