--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </body>
 <ul>
 	<li>
+		<a href="01/index.html">Lesson 1 CV</a>
+	</li>
+	<li>
 		<a href="02/index.html">Lesson 2 CV CSS</a>
 	</li>
 </ul>
+
 </html>
