added video to lesson 3

--- a/03-Semantic Elements/index.html
+++ b/03-Semantic Elements/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,17 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-	<H2>Тут поки що нічого немає</H2>
-	<span></span><br>
 	
-
-
 	<div class="video">
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/zyOS2EY_awk?start=115" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<h1>Тут поки що нічого немає</h1>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/zyOS2EY_awk?start=115"
+			title="YouTube video player" frameborder="0"
+			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+			allowfullscreen></iframe>
 	</div>
 
 </body>
+
 </html>
