--- a/03-Semantic Elements/index.html
+++ b/03-Semantic Elements/index.html
@@ -1,24 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Semantic Elements</title>
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-	
-	<div class="video">
-		<h1>Тут поки що нічого немає</h1>
-		<section>
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/ax8dsrrVep4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</section>
-		
-	</div>
 
+	<div class="container">
+
+		<ul id="top">
+			<li><a href="#p1">Підтримка браузерів</a></li>
+			<li><a href="#p2">Нові семантичні елементи в HTML5</a></li>
+			<li><a href="#p3">HTML5 &lt;section&gt; елемент</a></li>
+			<li><a href="#p4">HTML5 &lt;article&gt; елемент</a></li>
+			<li><a href="#p5">HTML5 &lt;header&gt; елемент</a></li>
+			<li><a href="#p6">HTML5 &lt;footer&gt; елемент</a></li>
+			<li><a href="#cv">CV</a></li>
+			<li><a href="#video">відео з ютюб</a></li>
+		</ul>
+
+		<section>
+			<h1>HTML5 Семантичні елементи</h1>
+			<p>
+				Семантичний елемент чітко описує його значення як для браузера, так і
+				для розробника.<br><br>
+				Приклади не <strong>семантичних</strong> елементів:&lt;div &gt; і &lt;span &gt;- нічого не говорить
+				про його вміст.<br><br>
+				Приклади <strong>семантичних</strong> елементів: &lt;form &gt;, &lt;table &gt; і &lt;article &gt; - чітко
+				визначає його зміст.
+			</p>
+		</section>
+
+		<section>
+
+			<h2 id="p1"> Підтримка браузерів</h2>
+			<img src="assets/image/brauzer.jfif" alt="brauzers">
+			<p>
+				Семантичні елементи HTML5 підтримуються у всіх сучасних браузерах. <br><br>
+				Крім того, ви можете "навчити" старих браузерів, як обробляти "невідомі
+				елементи".<br><br>
+				Прочитайте про це <a href="https://schoolsw3.com/html/html5_browsers.php" target="_blank">в підтримці браузера
+					HTML5</a> в підтримці браузера HTML5.
+			</p>
+
+		</section>
+
+		<section>
+
+			<h2 id="p2">Нові семантичні елементи в HTML5</h2>
+			<p>HTML5 пропонує нові семантичні елементи для визначення різних частин веб-сторінки:
+			</p>
+			<ul>
+				<li>&lt;section&gt;</li>
+				<li>&lt;article&gt;</li>
+				<li>&lt;header&gt;</li>
+				<li>&lt;footer&gt;</li>
+			</ul>
+			<p><a href="#top">&lt;на гору&gt;</a></p>
+		</section>
+
+		<section>
+
+			<h2 id="p3">HTML5 &lt;section&gt; елемент</h2>
+			<p>
+				Елемент &lt;section&gt;визначає розділ в документі.<br><br>
+				Згідно з документацією в3к'с HTML5: "розділ представляє собою
+				тематичну угруповання контенту, зазвичай з заголовком".<br><br>
+				Домашня сторінка зазвичай може бути розділена на розділи для
+				ознайомлення, змісту і контактної інформації.
+			</p>
+			<img src="assets/image/example1.jpg" alt="example1">
+			<p><a href="#top">&lt;на гору&gt;</a></p>
+		</section>
+
+		<section>
+
+			<h2 id="p4">HTML5 &lt;article&gt; елемент</h2>
+			<p>Елемент &lt;article&gt;визначає незалежний, автономний вміст. <br><br>
+				Стаття повинна мати сенс самостійно, і вона повинна мати можливість
+				читати його незалежно від іншої частини веб-сайту.<br><br>
+				Приклади того, де можна використовувати елемент &lt;article&gt;:
+			</p>
+			<ul>
+				<li>Повідомлення на форумі</li>
+				<li>Блозі</li>
+				<li>Газетна стаття</li>
+			</ul>
+			<img src="assets/image/example2.jpg" alt="example2">
+			<p><a href="#top">&lt;на гору&gt;</a></p>
+		</section>
+
+		<section>
+
+			<h2 id="p5">HTML5 &lt;header&gt; елемент</h2>
+			<p>Елемент &lt;header&gt; задає заголовок для документа або розділу.<br><br>
+				Елемент &lt;header&gt;повинен використовуватися в якості контейнера для
+				вступного змісту.<br><br>
+				В одному документі може бути кілька елементів &lt;header&gt;.<br><br>
+				У наступному прикладі визначається заголовок для статті:</p>
+			<img src="assets/image/example3.jpg" alt="example3">
+			<p><a href="#top">&lt;на гору&gt;</a></p>
+		</section>
+
+		<section>
+
+			<h2 id="p6">HTML5 &lt;footer&gt; елемент</h2>
+			<p>Елемент &lt;footer&gt;вказує нижній колонтитул для документа або розділу.<br><br>
+				Нижній колонтитул зазвичай містить автора документа, інформацію про
+				авторське право, посилання на умови використання, контактні дані і т.д.<br><br>
+				В одному документі може бути кілька елементів &lt;footer&gt;.</p>
+			<img src="assets/image/example4.jpg" alt="example">
+
+		</section>
+
+		<iframe id="cv" class="iframe-cv" src="https://vasinalex.github.io/HomeworkGit/02/index.html"
+			style="border:0;"></iframe>
+		<p><a href="#top">&lt;на гору&gt;</a></p>
+
+		<br><br>
+		<iframe id="video" width="900" height="506"
+			src="https://www.youtube.com/embed/dEBVe8Ij7JU?list=PLytQ0YczAfcdj-OUqWO20vPsr0ix0M1Us"
+			title="Front-End розробка. Сучасні тренди" style="border:0;"
+			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+			allowfullscreen></iframe>
+		<p><a href="#top">&lt;на гору&gt;</a></p>
+
+	</div>
 </body>
 
 </html>
