Added block Nav

--- a/03-Semantic Elements/index.html
+++ b/03-Semantic Elements/index.html
@@ -13,16 +13,18 @@
 
 	<div class="container">
 
-		<ul id="top">
-			<li><a href="#p1">Підтримка браузерів</a></li>
-			<li><a href="#p2">Нові семантичні елементи в HTML5</a></li>
-			<li><a href="#p3">HTML5 &lt;section&gt; елемент</a></li>
-			<li><a href="#p4">HTML5 &lt;article&gt; елемент</a></li>
-			<li><a href="#p5">HTML5 &lt;header&gt; елемент</a></li>
-			<li><a href="#p6">HTML5 &lt;footer&gt; елемент</a></li>
-			<li><a href="#cv">CV</a></li>
-			<li><a href="#video">відео з ютюб</a></li>
-		</ul>
+		<nav id="top">
+			<ul>
+				<li><a href="#p1">Підтримка браузерів</a></li>
+				<li><a href="#p2">Нові семантичні елементи в HTML5</a></li>
+				<li><a href="#p3">HTML5 &lt;section&gt; елемент</a></li>
+				<li><a href="#p4">HTML5 &lt;article&gt; елемент</a></li>
+				<li><a href="#p5">HTML5 &lt;header&gt; елемент</a></li>
+				<li><a href="#p6">HTML5 &lt;footer&gt; елемент</a></li>
+				<li><a href="#cv">CV</a></li>
+				<li><a href="#video">відео з ютюб</a></li>
+			</ul>
+		</nav>
 
 		<section>
 			<h1>HTML5 Семантичні елементи</h1>
@@ -44,7 +46,7 @@
 				Семантичні елементи HTML5 підтримуються у всіх сучасних браузерах. <br><br>
 				Крім того, ви можете "навчити" старих браузерів, як обробляти "невідомі
 				елементи".<br><br>
-				Прочитайте про це <a href="https://schoolsw3.com/html/html5_browsers.php" target="_blank">в підтримці браузера
+				Прочитайте про це <a href="https://www.blogger.com/onboarding" target="_blank">в підтримці браузера
 					HTML5</a> в підтримці браузера HTML5.
 			</p>
 
