--- a/03-Semantic Elements/index.html
+++ b/03-Semantic Elements/index.html
@@ -63,7 +63,7 @@
 				<li>&lt;header&gt;</li>
 				<li>&lt;footer&gt;</li>
 			</ul>
-			<p><a href="#top">&lt;на гору&gt;</a></p>
+			<p><a href="#top">До гори</a></p>
 		</section>
 
 		<section>
@@ -77,7 +77,7 @@
 				ознайомлення, змісту і контактної інформації.
 			</p>
 			<img src="assets/image/example1.jpg" alt="example1">
-			<p><a href="#top">&lt;на гору&gt;</a></p>
+			<p><a href="#top">До гори</a></p>
 		</section>
 
 		<section>
@@ -94,7 +94,7 @@
 				<li>Газетна стаття</li>
 			</ul>
 			<img src="assets/image/example2.jpg" alt="example2">
-			<p><a href="#top">&lt;на гору&gt;</a></p>
+			<p><a href="#top">До гори</a></p>
 		</section>
 
 		<section>
@@ -106,7 +106,7 @@
 				В одному документі може бути кілька елементів &lt;header&gt;.<br><br>
 				У наступному прикладі визначається заголовок для статті:</p>
 			<img src="assets/image/example3.jpg" alt="example3">
-			<p><a href="#top">&lt;на гору&gt;</a></p>
+			<p><a href="#top">До гори</a></p>
 		</section>
 
 		<section>
@@ -122,7 +122,7 @@
 
 		<iframe id="cv" class="iframe-cv" src="https://vasinalex.github.io/HomeworkGit/02/index.html"
 			style="border:0;"></iframe>
-		<p><a href="#top">&lt;на гору&gt;</a></p>
+		<p><a href="#top">До гори</a></p>
 
 		<br><br>
 		<iframe id="video" width="900" height="506"
@@ -130,7 +130,7 @@
 			title="Front-End розробка. Сучасні тренди" style="border:0;"
 			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 			allowfullscreen></iframe>
-		<p><a href="#top">&lt;на гору&gt;</a></p>
+		<p><a href="#top">До гори</a></p>
 
 	</div>
 </body>
