--- a/03-Semantic Elements/index.html
+++ b/03-Semantic Elements/index.html
@@ -13,125 +13,121 @@
 
 	<div class="container">
 
-		<nav id="top">
-			<ul>
-				<li><a href="#p1">Підтримка браузерів</a></li>
-				<li><a href="#p2">Нові семантичні елементи в HTML5</a></li>
-				<li><a href="#p3">HTML5 &lt;section&gt; елемент</a></li>
-				<li><a href="#p4">HTML5 &lt;article&gt; елемент</a></li>
-				<li><a href="#p5">HTML5 &lt;header&gt; елемент</a></li>
-				<li><a href="#p6">HTML5 &lt;footer&gt; елемент</a></li>
-				<li><a href="#cv">CV</a></li>
-				<li><a href="#video">відео з ютюб</a></li>
-			</ul>
-		</nav>
+		<header>
+			<nav>
+				<ul>
+					<li><a href="#p1">Підтримка браузерів</a></li>
+					<li><a href="#p2">Нові семантичні елементи в HTML5</a></li>
+					<li><a href="#p3">HTML5 &lt;section&gt; елемент</a></li>
+					<li><a href="#p4">HTML5 &lt;article&gt; елемент</a></li>
+					<li><a href="#p5">HTML5 &lt;header&gt; елемент</a></li>
+					<li><a href="#p6">HTML5 &lt;footer&gt; елемент</a></li>
+					<li><a href="#cv">CV</a></li>
+					<li><a href="#video">відео з ютюб</a></li>
+				</ul>
+			</nav>
+		</header>
 
-		<section>
-			<h1>HTML5 Семантичні елементи</h1>
-			<p>
-				Семантичний елемент чітко описує його значення як для браузера, так і
-				для розробника.<br><br>
-				Приклади не <strong>семантичних</strong> елементів:&lt;div &gt; і &lt;span &gt;- нічого не говорить
-				про його вміст.<br><br>
-				Приклади <strong>семантичних</strong> елементів: &lt;form &gt;, &lt;table &gt; і &lt;article &gt; - чітко
-				визначає його зміст.
-			</p>
-		</section>
+		<main>
+			<section>
+				<h1>HTML5 Семантичні елементи</h1>
+				<p>
+					Семантичний елемент чітко описує його значення як для браузера, так і
+					для розробника.<br><br>
+					Приклади не <strong>семантичних</strong> елементів:&lt;div &gt; і &lt;span &gt;- нічого не говорить
+					про його вміст.<br><br>
+					Приклади <strong>семантичних</strong> елементів: &lt;form &gt;, &lt;table &gt; і &lt;article &gt; - чітко
+					визначає його зміст.
+				</p>
+			</section>
+			<article>
+				<section>
+					<h2 id="p1"> Підтримка браузерів</h2>
+					<img src="assets/image/brauzer.jfif" alt="brauzers">
+					<p>
+						Семантичні елементи HTML5 підтримуються у всіх сучасних браузерах. <br><br>
+						Крім того, ви можете "навчити" старих браузерів, як обробляти "невідомі
+						елементи".<br><br>
+						Прочитайте про це <a href="https://www.blogger.com/onboarding" target="_blank">в підтримці браузера
+							HTML5</a> в підтримці браузера HTML5.
+					</p>
+				</section>
 
-		<section>
+				<section>
+					<h2 id="p2">Нові семантичні елементи в HTML5</h2>
+					<p>HTML5 пропонує нові семантичні елементи для визначення різних частин веб-сторінки:
+					</p>
+					<ul>
+						<li>&lt;section&gt;</li>
+						<li>&lt;article&gt;</li>
+						<li>&lt;header&gt;</li>
+						<li>&lt;footer&gt;</li>
+					</ul>
+					<p><a href="#">До гори</a></p>
+				</section>
 
-			<h2 id="p1"> Підтримка браузерів</h2>
-			<img src="assets/image/brauzer.jfif" alt="brauzers">
-			<p>
-				Семантичні елементи HTML5 підтримуються у всіх сучасних браузерах. <br><br>
-				Крім того, ви можете "навчити" старих браузерів, як обробляти "невідомі
-				елементи".<br><br>
-				Прочитайте про це <a href="https://www.blogger.com/onboarding" target="_blank">в підтримці браузера
-					HTML5</a> в підтримці браузера HTML5.
-			</p>
+				<section>
+					<h2 id="p3">HTML5 &lt;section&gt; елемент</h2>
+					<p>
+						Елемент &lt;section&gt;визначає розділ в документі.<br><br>
+						Згідно з документацією в3к'с HTML5: "розділ представляє собою
+						тематичну угруповання контенту, зазвичай з заголовком".<br><br>
+						Домашня сторінка зазвичай може бути розділена на розділи для
+						ознайомлення, змісту і контактної інформації.
+					</p>
+					<img src="assets/image/example1.jpg" alt="example1">
+					<p><a href="#">До гори</a></p>
+				</section>
 
-		</section>
+				<section>
+					<h2 id="p4">HTML5 &lt;article&gt; елемент</h2>
+					<p>Елемент &lt;article&gt;визначає незалежний, автономний вміст. <br><br>
+						Стаття повинна мати сенс самостійно, і вона повинна мати можливість
+						читати його незалежно від іншої частини веб-сайту.<br><br>
+						Приклади того, де можна використовувати елемент &lt;article&gt;:
+					</p>
+					<ul>
+						<li>Повідомлення на форумі</li>
+						<li>Блозі</li>
+						<li>Газетна стаття</li>
+					</ul>
+					<img src="assets/image/example2.jpg" alt="example2">
+					<p><a href="#">До гори</a></p>
+				</section>
 
-		<section>
+				<section>
+					<h2 id="p5">HTML5 &lt;header&gt; елемент</h2>
+					<p>Елемент &lt;header&gt; задає заголовок для документа або розділу.<br><br>
+						Елемент &lt;header&gt;повинен використовуватися в якості контейнера для
+						вступного змісту.<br><br>
+						В одному документі може бути кілька елементів &lt;header&gt;.<br><br>
+						У наступному прикладі визначається заголовок для статті:</p>
+					<img src="assets/image/example3.jpg" alt="example3">
+					<p><a href="#">До гори</a></p>
+				</section>
 
-			<h2 id="p2">Нові семантичні елементи в HTML5</h2>
-			<p>HTML5 пропонує нові семантичні елементи для визначення різних частин веб-сторінки:
-			</p>
-			<ul>
-				<li>&lt;section&gt;</li>
-				<li>&lt;article&gt;</li>
-				<li>&lt;header&gt;</li>
-				<li>&lt;footer&gt;</li>
-			</ul>
-			<p><a href="#top">До гори</a></p>
-		</section>
+				<section>
+					<h2 id="p6">HTML5 &lt;footer&gt; елемент</h2>
+					<p>Елемент &lt;footer&gt;вказує нижній колонтитул для документа або розділу.<br><br>
+						Нижній колонтитул зазвичай містить автора документа, інформацію про
+						авторське право, посилання на умови використання, контактні дані і т.д.<br><br>
+						В одному документі може бути кілька елементів &lt;footer&gt;.</p>
+					<img src="assets/image/example4.jpg" alt="example">
+				</section>
+			</article>
 
-		<section>
+			<iframe id="cv" class="iframe-cv" src="https://vasinalex.github.io/HomeworkGit/02/index.html"
+				style="border:0;"></iframe>
+			<p><a href="#">До гори</a></p>
 
-			<h2 id="p3">HTML5 &lt;section&gt; елемент</h2>
-			<p>
-				Елемент &lt;section&gt;визначає розділ в документі.<br><br>
-				Згідно з документацією в3к'с HTML5: "розділ представляє собою
-				тематичну угруповання контенту, зазвичай з заголовком".<br><br>
-				Домашня сторінка зазвичай може бути розділена на розділи для
-				ознайомлення, змісту і контактної інформації.
-			</p>
-			<img src="assets/image/example1.jpg" alt="example1">
-			<p><a href="#top">До гори</a></p>
-		</section>
-
-		<section>
-
-			<h2 id="p4">HTML5 &lt;article&gt; елемент</h2>
-			<p>Елемент &lt;article&gt;визначає незалежний, автономний вміст. <br><br>
-				Стаття повинна мати сенс самостійно, і вона повинна мати можливість
-				читати його незалежно від іншої частини веб-сайту.<br><br>
-				Приклади того, де можна використовувати елемент &lt;article&gt;:
-			</p>
-			<ul>
-				<li>Повідомлення на форумі</li>
-				<li>Блозі</li>
-				<li>Газетна стаття</li>
-			</ul>
-			<img src="assets/image/example2.jpg" alt="example2">
-			<p><a href="#top">До гори</a></p>
-		</section>
-
-		<section>
-
-			<h2 id="p5">HTML5 &lt;header&gt; елемент</h2>
-			<p>Елемент &lt;header&gt; задає заголовок для документа або розділу.<br><br>
-				Елемент &lt;header&gt;повинен використовуватися в якості контейнера для
-				вступного змісту.<br><br>
-				В одному документі може бути кілька елементів &lt;header&gt;.<br><br>
-				У наступному прикладі визначається заголовок для статті:</p>
-			<img src="assets/image/example3.jpg" alt="example3">
-			<p><a href="#top">До гори</a></p>
-		</section>
-
-		<section>
-
-			<h2 id="p6">HTML5 &lt;footer&gt; елемент</h2>
-			<p>Елемент &lt;footer&gt;вказує нижній колонтитул для документа або розділу.<br><br>
-				Нижній колонтитул зазвичай містить автора документа, інформацію про
-				авторське право, посилання на умови використання, контактні дані і т.д.<br><br>
-				В одному документі може бути кілька елементів &lt;footer&gt;.</p>
-			<img src="assets/image/example4.jpg" alt="example">
-
-		</section>
-
-		<iframe id="cv" class="iframe-cv" src="https://vasinalex.github.io/HomeworkGit/02/index.html"
-			style="border:0;"></iframe>
-		<p><a href="#top">До гори</a></p>
-
-		<br><br>
-		<iframe id="video" width="900" height="506"
-			src="https://www.youtube.com/embed/dEBVe8Ij7JU?list=PLytQ0YczAfcdj-OUqWO20vPsr0ix0M1Us"
-			title="Front-End розробка. Сучасні тренди" style="border:0;"
-			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-			allowfullscreen></iframe>
-		<p><a href="#top">До гори</a></p>
-
+			<br><br>
+			<iframe id="video" width="900" height="506"
+				src="https://www.youtube.com/embed/dEBVe8Ij7JU?list=PLytQ0YczAfcdj-OUqWO20vPsr0ix0M1Us"
+				title="Front-End розробка. Сучасні тренди" style="border:0;"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
+			<p><a href="#">До гори</a></p>
+		</main>
 	</div>
 </body>
 
