--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 	<li>
 		<a href="03-Semantic Elements/index.html">Lesson 3 Semantic Elements</a>
 	</li>
+	<li>
+		<a href="04-forms/index.html">Lesson 4 Forms</a>
+	</li>
 </ul>
 
 </html>
