Added corrected forms

--- a/03-Semantic Elements/index.html
+++ b/03-Semantic Elements/index.html
@@ -62,6 +62,8 @@
 						<li>&lt;header&gt;</li>
 						<li>&lt;footer&gt;</li>
 					</ul>
+
+					<!-- <p> можно не обгортати -->
 					<p><a href="#">До гори</a></p>
 				</section>
 
@@ -114,6 +116,9 @@
 					<img src="assets/image/example4.jpg" alt="example">
 				</section>
 			</article>
+
+			
+<!-- обгорнути в section -->
 
 			<iframe id="cv" class="iframe-cv" src="https://vasinalex.github.io/HomeworkGit/02/index.html"
 				style="border:0;"></iframe>
