--- a/05-figma Denis Novak/index.html
+++ b/05-figma Denis Novak/index.html
@@ -25,154 +25,155 @@
 				</ul>
 			</nav>
 		</div>
-
 	</header>
+	<!-- ------------Denis Novik----------------------- -->
+	<main class="main">
 
-	<maine class="maine">
 		<div class="container">
-			<div class="ferst-screen">
+			<section class="novik ">
 				<h1>Denis Novik</h1>
-				<div class="ferst-screen__image">
-					<img src="assets/images/photox970.jpg" alt="photo">
-				</div>
-			</div>
+				<img src="assets/images/photox970.jpg" alt="DN">
+			</section>
 		</div>
-
-
-		<div class="bg">
+		<!-- ----------------Фbout-me------------------------------ -->
+		<div class="bg-gray">
 			<div class="container">
-				<div class="about-me">
+				<section class="about-me">
 					<h2>About me</h2>
-					<div class="about-me__item text">
-						<p>Hi, I'm Denis – UX/UI designer from Minsk.
-							I'm interested in design and everything connected with it.
-						</p>
-						<p>
-							I'm studying at courses "Web and mobile design interfaces" in IT-Academy.
-						</p>
-						<p>
-							Ready to implement excellent projects with wonderful people.
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="container">
-			<div class="skills">
-				<h2>Skills</h2>
-
-				<div class="text">
-					<p>I work in such programs as</p>
-					<div class="product-list">
-
-						<div class="photoshop">
-							<div class="icon">
-								<img src="assets/images/Ps.png" alt="ps">
-							</div>
-							<span class="photoshop__title">Adobe Photoshop</span>
-						</div>
-
-						<div class="illustrator">
-							<div class="icon">
-								<img src="assets/images/Ai.png" alt="ai">
-							</div>
-							<span class="illustrator__title">Adobe Illustrator</span>
-
-						</div>
-
-						<div class="after-effects">
-							<div class="icon">
-								<img src="assets/images/Ae.png" alt="ae">
-							</div>
-							<span class="after-effects__title">Adobe After Effects</span>
-						</div>
-
-						<div class="figma">
-							<div class="icon">
-								<img src="assets/images/Figma.png" alt="ps">
-							</div>
-							<span class="figma__title">Figma</span>
-						</div>
-					</div>
-				</div>
-
-
-			</div>
-		</div>
-		<div class="bg">
-			<div class="container">
-				<div class="portfolio">
-					<h2>Portfolio</h2>
-					<div class="fashion">
-						<div class="fashion__image">
-							<img src="assets/images/Fashion-Store.jpg" alt="fashion">
-						</div>
-						<div class="portfolio__text">
-							<p>Online fashion store - Homepage</p>
-						</div>
-					</div>
-					<div class="reebok">
-						<div class="reebok__image">
-							<img src="assets/images/reebok_web.jpg" alt="reebok">
-						</div>
-						<div class="portfolio__text">
-							<p>Reebok Store - Concept</p>
-						</div>
-					</div>
-					<div class="braun">
-						<div class="braun__image">
-							<img src="assets/images/braun-landing.jpg" alt="braun">
-						</div>
-						<div class="portfolio__text">
-							<p>Braun Landing Page - Concept</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</maine>
-
-	<footer class="footer">
-		<div class="container">
-			<h2>Contacts</h2>
-			<div class="footer__text">
-				<p>Want to know more or just chat? You are welcome!</p>
-			</div>
-			<div class="footer__links">
-				<button class="send-message">Send message</button>
-				<nav class="social-group">
 					<ul>
-						<li>
-							<a href="#">
-								<img src="assets/icon/linkedin.png" alt="linkedin">
-							</a>
+						<li>Hi, I'm Denis – UX/UI designer from Minsk.
+							I'm interested in design and everything connected with it.
 						</li>
-						<li>
-							<a href="#">
-								<img src="assets/icon/instagram.png" alt="instagram">
-							</a>
+						<li>I'm studying at courses "Web and mobile design
+							interfaces" in IT-Academy.
 						</li>
-						<li>
-							<a href="#">
-								<img src="assets/icon/behance.png" alt="behance">
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="assets/icon/dribbble.png" alt="dribbble">
-							</a>
+						<li>Ready to implement excellent projects
+							with wonderful people.
 						</li>
 					</ul>
-				</nav>
-			</div>
-			<div class="follow">
-				<p>Like me on
-					LinkedIn, Instagram, Behance, Dribble
-				</p>
+				</section>
 			</div>
 		</div>
+		<!-- ------------------Skills----------------------------- -->
+		<div class="container">
+			<section class="skills">
+				<h2>Skills</h2>
+				<span>I work in such programs as</span>
+				<ul>
+					<li>
+						<img src="assets/images/Ps.png" alt="">
+						<span>Adobe Photoshop<span>
+								<div class="stars">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+								</div>
+					</li>
 
+					<li>
+						<img src="assets/images/Ai.png" alt="">
+						<span>Adobe Illustrator<span>
+								<div class="stars">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+								</div>
+					</li>
+
+					<li>
+						<img src="assets/images/Ae.png" alt="">
+						<span>Adobe After Effects<span>
+								<div class="stars">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+								</div>
+					</li>
+
+					<li>
+						<img src="assets/images/Figma.png" alt="">
+						<span>Figma<span>
+								<div class="stars">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="">
+									<img src="assets/icon/star-icon.svg" alt="">
+								</div>
+					</li>
+				</ul>
+			</section>
+		</div>
+		<!-- --------------Portfolio--------------------- -->
+		<div class="bg-gray">
+			<div class="container">
+				<section class="portfolio">
+					<h2>Portfolio</h2>
+
+					<div class="fashion">
+						<img src="assets/images/Fashion-Store.jpg" alt="">
+						<a href="#" target="_blank">
+							Online fashion store - Homepage
+						</a>
+					</div>
+
+					<div class="reebok">
+						<img src="assets/images/reebok_web.jpg" alt="">
+						<a href="#" target="_blank">
+							Reebok Store - Concept
+						</a>
+					</div>
+
+					<div class="fashion">
+						<img src="assets/images/braun-landing.jpg" alt="">
+						<a href="#" target="_blank">
+							Braun Landing Page - Concept
+						</a>
+					</div>
+				</section>
+			</div>
+		</div>
+	</main>
+	<!-- --------------Contacts--------------------- -->
+	<footer class="footer">
+		<div class="container">
+			<section class="contacts">
+				<h2>Contacts</h2>
+				<span>Want to know more or just chat? You are welcome!</span>
+				<button class="message">Send message</button>
+				<ul>
+					<li>
+						<a href="#" target="_blank">
+							<img src="assets/icon/linkedin.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="#" target="_blank">
+							<img src="assets/icon/instagram.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="#" target="_blank">
+							<img src="assets/icon/behance.png" alt="">
+						</a>
+					</li>
+					<li>
+						<a href="#" target="_blank">
+							<img src="assets/icon/dribbble.png" alt="">
+						</a>
+					</li>
+				</ul>>
+				<div class="likemeon">
+					Like me on LinkedIn, Instagram, Behance, Dribble
+				</div>
+			</section>
+		</div>
 	</footer>
 </body>
 
