added corrected forms

--- a/04-forms/index.html
+++ b/04-forms/index.html
@@ -60,8 +60,8 @@
 				</select>
 				<br>
 
-				<label for="area">Повна адреса</label>
-				<textarea required id="area" placeholder="Країна, регіон, місто, вулиця" name="address"></textarea>
+				<label for="textarea">Повна адреса</label>
+				<textarea required id="textarea" placeholder="Країна, регіон, місто, вулиця" name="address"></textarea>
 				<br>
 
 				<input required id="agree" type="checkbox" name="agree" value="yes">
