Added Denis Novik

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 	<li>
 		<a href="04-forms/index.html">Lesson 4 Forms</a>
 	</li>
+	<li>
+		<a href="04-forms/allforms.html">Додадкове завдання Forms</a>
+	</li>
+	<li>
+		<a href="05-figma Denis Novak/">Denis Novik</a>
+	</li>
 </ul>
 
 </html>
