--- a/04-forms/allforms.html
+++ b/04-forms/allforms.html
@@ -10,115 +10,118 @@
 </head>
 
 <body>
-	<form action="#" method="post" enctype="multipart/form-data">
-		<fieldset class="all-forms">
-			<legend>All Forms</legend>
-			<label for="blocked-text">Заблоковане поле</label>
-			<input disabled type="text" name="blocked-text" id="blocked-text" value="Змінити неможна">
-			<br>
 
-
-
-			<label for="readonly">Якись текст</label>
-			<input readonly id="readonly" type="text" name="readonly" value="Мене тільки читати">
-			<br>
-
-
-
-			<label for="text">Домашній улюбленець*</label>
-			<input required type="text" name="text" id="text" placeholder="Ім'я тварини">
-			<br>
-			<label for="email">Ваш email</label>
-			<input id="email" type="email" name="email" placeholder="ginka@gittya.net">
-			<br>
-			<label for="password">Пароль</label>
-			<input type="password" name="password" id="password">
-			<br>
-			<label for="date">Дата народження</label>
-			<input type="date" name="data" id="date">
-			<br>
-			<label for="number">Вік дерева вколо дома</label>
-			<input type="number" name="number" id="number">
-			<br>
-			<label for="floor">Ваша підлога</label>
-			<label><input id="floor" type="radio" name="floor" value="паркет"> Паркет</label>
-			<label><input class="floor" type="radio" name="floor" value="ламінат"> Ламінат</label>
-			<label><input class="floor" type="radio" name="floor" value="ковролін"> Ковролін</label>
-			<br>
-			<label for="media">Cоціальні мережі</label>
-			<label><input id="media" type="checkbox" name="social-media[]"> Instagram</label>
-			<label><input type="checkbox" name="social-media[]"> FaceBook</label>
-			<label><input type="checkbox" name="social-media[]"> Linkedin</label>
-		</fieldset>
-
-		<fieldset>
-			<legend>Інша інформація</legend>
-			<label>Улюблений колір</label>
-			<input type="color" name="color">
-			<br>
-			<label for="phone">Номер телефона</label>
-			<input type="tel" id="phone" name="phone" maxlength="10">
-			<br>
-			<label for="time">Час наступного дзвінка</label>
-			<input type="time" name="time" id="time">
-			<br>
-			<label for="url">Улюблений сайт</label>
-			<input id="url" type="url" name="url" placeholder="https://google.com">
-			<br>
-			<label>Число від 1 до 10</label>
-			<input type="range" name="range" min="1" max="10">
-			<br>
-			<label>Поділися зображенням</label>
-			<input type="file" name="picture">
-		</fieldset>
-
-		<fieldset>
-			<legend>Не iput-ы</legend>
-
-			<label>Улюблені напоі</label>
-			<select name="nonealcohol">
-				<option>==Вибери===</option>
-				<optgroup label="Безакогольні">
-					<option value="tea">Чай</option>
-					<option value="coffe">Кава</option>
-					<option value="juice">Сок</option>
-					<option value="сampot">Кампот</option>
-				</optgroup>
-				<optgroup label="Алкогольні">
-					<option value="vodka">Водка</option>
-					<option value="bear">Пиво</option>
-					<option value="martini">Мартини</option>
-				</optgroup>
-			</select>
-			<br>
-			<label>Улюблені напоі</label>
-			<select name="alcohol" multiple>
-				<option>==Вибери===</option>
-				<optgroup label="Безакогольні">
-					<option value="tea">Чай</option>
-					<option value="coffe">Кава</option>
-					<option value="juice">Сок</option>
-					<option value="сampot">Кампот</option>
-				</optgroup>
-				<optgroup label="Алкогольні">
-					<option value="vodka">Водка</option>
-					<option value="bear">Пиво</option>
-					<option value="martini">Мартини</option>
-				</optgroup>
-			</select>
-			<br>
-			<label for="textarea">Додай свій коментар</label>
-			<textarea name="commit" id="textarea" cols="50" rows="6" placeholder="Коментар писати тут"></textarea>
-		</fieldset>
-
-		<fieldset>
-			<legend>Кнопки</legend>
-			<input type="submit" name="submit">
-			<input type="reset">
-			<button>звичайна кнопка</button>
-			<button disabled>кнопка заблокована :(</button>
-		</fieldset>
-	</form>
+	<div class="container">
+		<form action="#" method="post" enctype="multipart/form-data">
+			<fieldset class="all-forms">
+				<legend>All Forms</legend>
+				<label for="blocked-text">Заблоковане поле</label>
+				<input disabled type="text" name="blocked-text" id="blocked-text" value="Змінити неможна">
+				<br>
+	
+	
+	
+				<label for="readonly">Якись текст</label>
+				<input readonly id="readonly" type="text" name="readonly" value="Мене тільки читати">
+				<br>
+	
+	
+	
+				<label for="text">Домашній улюбленець*</label>
+				<input required type="text" name="text" id="text" placeholder="Ім'я тварини">
+				<br>
+				<label for="email">Ваш email</label>
+				<input id="email" type="email" name="email" placeholder="ginka@gittya.net">
+				<br>
+				<label for="password">Пароль</label>
+				<input type="password" name="password" id="password">
+				<br>
+				<label for="date">Дата народження</label>
+				<input type="date" name="data" id="date">
+				<br>
+				<label for="number">Вік дерева вколо дома</label>
+				<input type="number" name="number" id="number">
+				<br>
+				<label for="floor">Ваша підлога</label>
+				<label><input id="floor" type="radio" name="floor" value="паркет"> Паркет</label>
+				<label><input class="floor" type="radio" name="floor" value="ламінат"> Ламінат</label>
+				<label><input class="floor" type="radio" name="floor" value="ковролін"> Ковролін</label>
+				<br>
+				<label for="media">Cоціальні мережі</label>
+				<label><input id="media" type="checkbox" name="social-media[]"> Instagram</label>
+				<label><input type="checkbox" name="social-media[]"> FaceBook</label>
+				<label><input type="checkbox" name="social-media[]"> Linkedin</label>
+			</fieldset>
+	
+			<fieldset>
+				<legend>Інша інформація</legend>
+				<label>Улюблений колір</label>
+				<input type="color" name="color">
+				<br>
+				<label for="phone">Номер телефона</label>
+				<input type="tel" id="phone" name="phone" maxlength="10">
+				<br>
+				<label for="time">Час наступного дзвінка</label>
+				<input type="time" name="time" id="time">
+				<br>
+				<label for="url">Улюблений сайт</label>
+				<input id="url" type="url" name="url" placeholder="https://google.com">
+				<br>
+				<label>Число від 1 до 10</label>
+				<input type="range" name="range" min="1" max="10">
+				<br>
+				<label>Поділися зображенням</label>
+				<input type="file" name="picture">
+			</fieldset>
+	
+			<fieldset>
+				<legend>Не input-ы</legend>
+	
+				<label for="drinks">Улюблені напоі</label>
+				<select name="nonealcohol" id="drinks">
+					<option>==Вибери===</option>
+					<optgroup label="Безакогольні">
+						<option value="tea">Чай</option>
+						<option value="coffe">Кава</option>
+						<option value="juice">Сок</option>
+						<option value="сampot">Кампот</option>
+					</optgroup>
+					<optgroup label="Алкогольні">
+						<option value="vodka">Водка</option>
+						<option value="bear">Пиво</option>
+						<option value="martini">Мартини</option>
+					</optgroup>
+				</select>
+				<br>
+				<label for="drinks2">Улюблені напоі</label>
+				<select name="alcohol" id="drinks2" multiple>
+					<option>==Вибери===</option>
+					<optgroup label="Безакогольні">
+						<option value="tea">Чай</option>
+						<option value="coffe">Кава</option>
+						<option value="juice">Сок</option>
+						<option value="сampot">Кампот</option>
+					</optgroup>
+					<optgroup label="Алкогольні">
+						<option value="vodka">Водка</option>
+						<option value="bear">Пиво</option>
+						<option value="martini">Мартини</option>
+					</optgroup>
+				</select>
+				<br>
+				<label for="textarea">Додай свій коментар</label>
+				<textarea name="commit" id="textarea" cols="50" rows="6" placeholder="Коментар писати тут"></textarea>
+			</fieldset>
+	
+			<fieldset>
+				<legend>Кнопки</legend>
+				<input type="submit" name="submit">
+				<input type="reset">
+				<button>звичайна кнопка</button>
+				<button disabled>кнопка заблокована :(</button>
+			</fieldset>
+		</form>
+	</div>
 
 </body>
 
