--- a/04-forms/allforms.html
+++ b/04-forms/allforms.html
@@ -12,71 +12,80 @@
 <body>
 
 	<div class="container">
-		<form action="#" method="post" enctype="multipart/form-data">
+		<form action="#" method="post" enctype="multipart/form-data" id="my_form"
+			onsubmit="alert(decodeURI(new URLSearchParams(Array.from(new FormData(document.getElementById('my_form')))).toString()));return false;">
+
 			<fieldset class="all-forms">
 				<legend>All Forms</legend>
 				<label for="blocked-text">Заблоковане поле</label>
 				<input disabled type="text" name="blocked-text" id="blocked-text" value="Змінити неможна">
 				<br>
-	
-	
-	
+
 				<label for="readonly">Якись текст</label>
 				<input readonly id="readonly" type="text" name="readonly" value="Мене тільки читати">
 				<br>
-	
-	
-	
+
 				<label for="text">Домашній улюбленець*</label>
 				<input required type="text" name="text" id="text" placeholder="Ім'я тварини">
 				<br>
+
 				<label for="email">Ваш email</label>
 				<input id="email" type="email" name="email" placeholder="ginka@gittya.net">
 				<br>
+
 				<label for="password">Пароль</label>
 				<input type="password" name="password" id="password">
 				<br>
+
 				<label for="date">Дата народження</label>
 				<input type="date" name="data" id="date">
 				<br>
+
 				<label for="number">Вік дерева вколо дома</label>
 				<input type="number" name="number" id="number">
 				<br>
+
 				<label for="floor">Ваша підлога</label>
 				<label><input id="floor" type="radio" name="floor" value="паркет"> Паркет</label>
 				<label><input class="floor" type="radio" name="floor" value="ламінат"> Ламінат</label>
 				<label><input class="floor" type="radio" name="floor" value="ковролін"> Ковролін</label>
 				<br>
+
 				<label for="media">Cоціальні мережі</label>
-				<label><input id="media" type="checkbox" name="social-media[]"> Instagram</label>
-				<label><input type="checkbox" name="social-media[]"> FaceBook</label>
-				<label><input type="checkbox" name="social-media[]"> Linkedin</label>
+				<label><input id="media" type="checkbox" name="social-media[]" value="Instagram"> Instagram</label>
+				<label><input type="checkbox" name="social-media[]" value="FaceBook"> FaceBook</label>
+				<label><input type="checkbox" name="social-media[]" value="Linkedin"> Linkedin</label>
 			</fieldset>
-	
+
 			<fieldset>
 				<legend>Інша інформація</legend>
 				<label>Улюблений колір</label>
 				<input type="color" name="color">
 				<br>
+
 				<label for="phone">Номер телефона</label>
 				<input type="tel" id="phone" name="phone" maxlength="10">
 				<br>
+
 				<label for="time">Час наступного дзвінка</label>
 				<input type="time" name="time" id="time">
 				<br>
+
 				<label for="url">Улюблений сайт</label>
 				<input id="url" type="url" name="url" placeholder="https://google.com">
 				<br>
+
 				<label>Число від 1 до 10</label>
 				<input type="range" name="range" min="1" max="10">
 				<br>
+
 				<label>Поділися зображенням</label>
 				<input type="file" name="picture">
 			</fieldset>
-	
+
 			<fieldset>
 				<legend>Не input-ы</legend>
-	
+
 				<label for="drinks">Улюблені напоі</label>
 				<select name="nonealcohol" id="drinks">
 					<option>==Вибери===</option>
@@ -93,6 +102,7 @@
 					</optgroup>
 				</select>
 				<br>
+
 				<label for="drinks2">Улюблені напоі</label>
 				<select name="alcohol" id="drinks2" multiple>
 					<option>==Вибери===</option>
@@ -109,10 +119,11 @@
 					</optgroup>
 				</select>
 				<br>
+
 				<label for="textarea">Додай свій коментар</label>
 				<textarea name="commit" id="textarea" cols="50" rows="6" placeholder="Коментар писати тут"></textarea>
 			</fieldset>
-	
+
 			<fieldset>
 				<legend>Кнопки</legend>
 				<input type="submit" name="submit">
