--- a/05-figma Denis Novak/index.html
+++ b/05-figma Denis Novak/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>04-lesson Figma</title>
+	<title>04-lesson Figma Denis Novik</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -26,129 +26,145 @@
 			</nav>
 		</div>
 	</header>
-	<!-- ------------Denis Novik----------------------- -->
 	<main class="main">
-
+		<!-- ------------Denis Novik----------------------- -->
 		<div class="container">
 			<section class="novik ">
 				<h1>Denis Novik</h1>
-				<img src="assets/images/photox970.jpg" alt="DN">
+				<div class="novik-image">
+					<img src="assets/images/photox970.jpg" alt="DN">
+				</div>
 			</section>
 		</div>
-		<!-- ----------------Фbout-me------------------------------ -->
-		<div class="bg-gray">
+		<!-- ----------------About-me------------------------------ -->
+
+		<section class="about bg-gray">
 			<div class="container">
-				<section class="about-me">
-					<h2>About me</h2>
-					<ul>
-						<li>Hi, I'm Denis – UX/UI designer from Minsk.
-							I'm interested in design and everything connected with it.
-						</li>
-						<li>I'm studying at courses "Web and mobile design
-							interfaces" in IT-Academy.
-						</li>
-						<li>Ready to implement excellent projects
-							with wonderful people.
-						</li>
-					</ul>
-				</section>
+				<h2 class="section-title">About me</h2>
+
+				<div class="content">
+					<p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.
+					</p>
+					<p>I'm studying at courses "Web and mobile design interfaces" in IT-Academy.
+					</p>
+					<p>Ready to implement excellent projects<br>with wonderful people.
+					</p>
+				</div>
 			</div>
-		</div>
+		</section>
 		<!-- ------------------Skills----------------------------- -->
-		<div class="container">
-			<section class="skills">
-				<h2>Skills</h2>
+
+		<section class="skills">
+			<div class="container">
+				<h2 class="section-title">Skills</h2>
 				<span>I work in such programs as</span>
 
-				<ul>
+				<ul class="skills-list">
 					<li>
-						<img src="assets/images/Ps.png" alt="">
-						<span>Adobe Photoshop<span>
-								<div class="stars">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
-									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
-									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
-								</div>
+						<div class="img-skills">
+							<img src="assets/images/Ps.png" alt="">
+							<span>Adobe<br>Photoshop</span>
+						</div>
+						<div class="stars">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+							<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+							<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+						</div>
 					</li>
-
 					<li>
-						<img src="assets/images/Ai.png" alt="">
-						<span>Adobe Illustrator<span>
-								<div class="stars">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
-									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
-								</div>
+						<div class="img-skills">
+							<img src="assets/images/Ai.png" alt="">
+							<span>Adobe<br>Illustrator</span>
+						</div>
+						<div class="stars">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+							<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+						</div>
 					</li>
-
 					<li>
-						<img src="assets/images/Ae.png" alt="">
-						<span>Adobe After Effects<span>
-								<div class="stars">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="" class="star-light">
-								</div>
+						<div class="img-skills">
+							<img src="assets/images/Ae.png" alt="">
+							<span>Adobe<br>After Effects</span>
+						</div>
+						<div class="stars">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="" class="star-light">
+						</div>
 					</li>
-
 					<li>
-						<img src="assets/images/Figma.png" alt="">
-						<span>Figma<span>
-								<div class="stars">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="">
-									<img src="assets/icon/star-icon.svg" alt="">
-								</div>
+						<div class="img-skills">
+							<img src="assets/images/Figma.png" alt="">
+							<span>Figma</span>
+						</div>
+						<div class="stars">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="">
+							<img src="assets/icon/star-icon.svg" alt="">
+						</div>
 					</li>
 				</ul>
-			</section>
-		</div>
-		<!-- --------------Portfolio--------------------- -->
-		<div class="bg-gray">
-			<div class="container">
-				<section class="portfolio">
-					<h2>Portfolio</h2>
+			</div>
+		</section>
 
-					<div class="fashion">
+		<!-- --------------Portfolio--------------------- -->
+
+
+		<section class="portfolio bg-gray">
+			<div class="container">
+				<h2 class="section-title">Portfolio</h2>
+
+				<ul>
+					<li class="fashion">
 						<img src="assets/images/Fashion-Store.jpg" alt="">
 						<a href="#" target="_blank">
-							Online fashion store - Homepage
+							Online fashion store -<br> Homepage
 						</a>
-					</div>
-
-					<div class="reebok">
+					</li>
+					<li class="reebok">
 						<img src="assets/images/reebok_web.jpg" alt="">
 						<a href="#" target="_blank">
 							Reebok Store - Concept
 						</a>
-					</div>
-
-					<div class="fashion">
+					</li>
+					<li class="braun">
 						<img src="assets/images/braun-landing.jpg" alt="">
 						<a href="#" target="_blank">
 							Braun Landing Page - Concept
 						</a>
-					</div>
-				</section>
-			</div>
-		</div>
+					</li>
+				</ul>
+		</section>
+
+
+
+
+
 	</main>
 	<!-- --------------Contacts--------------------- -->
 	<footer class="footer">
-		<div class="container">
-			<section class="contacts">
-				<h2>Contacts</h2>
-				<span>Want to know more or just chat? You are welcome!</span>
-				<button class="message">Send message</button>
-				<ul>
+
+		<section class="contacts">
+			<div class="container">
+				<h2 class="section-title">Contacts</h2>
+				<span>Want to know more or just chat?&nbsp; You are welcome!</span>
+
+
+				<div class="button-wrap">
+					<button type="button" class="btn">Send message</button>
+				</div>
+
+
+				<ul class="contacts-media">
 					<li>
 						<a href="#" target="_blank">
 							<img src="assets/icon/linkedin.png" alt="">
@@ -170,11 +186,13 @@
 						</a>
 					</li>
 				</ul>
+
 				<div class="likemeon">
-					Like me on LinkedIn, Instagram, Behance, Dribble
+					Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble
 				</div>
-			</section>
-		</div>
+			</div>
+		</section>
+
 	</footer>
 </body>
 
