Added changes to the DN

--- a/05-figma Denis Novak/index.html
+++ b/05-figma Denis Novak/index.html
@@ -41,7 +41,6 @@
 		<section class="about bg-gray">
 			<div class="container">
 				<h2 class="section-title">About me</h2>
-
 				<div class="content">
 					<p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.
 					</p>
@@ -63,8 +62,11 @@
 					<li>
 						<div class="img-skills">
 							<img src="assets/images/Ps.png" alt="">
-							<span>Adobe<br>Photoshop</span>
 						</div>
+						<div class="skill-title">
+							Adobe Photoshop
+						</div>
+
 						<div class="stars">
 							<img src="assets/icon/star-icon.svg" alt="">
 							<img src="assets/icon/star-icon.svg" alt="">
@@ -76,8 +78,11 @@
 					<li>
 						<div class="img-skills">
 							<img src="assets/images/Ai.png" alt="">
-							<span>Adobe<br>Illustrator</span>
 						</div>
+						<div class="skill-title">
+							Adobe Illustrator
+						</div>
+
 						<div class="stars">
 							<img src="assets/icon/star-icon.svg" alt="">
 							<img src="assets/icon/star-icon.svg" alt="">
@@ -89,8 +94,11 @@
 					<li>
 						<div class="img-skills">
 							<img src="assets/images/Ae.png" alt="">
-							<span>Adobe<br>After Effects</span>
 						</div>
+						<div class="skill-title">
+							Adobe After&nbsp;Effects
+						</div>
+
 						<div class="stars">
 							<img src="assets/icon/star-icon.svg" alt="">
 							<img src="assets/icon/star-icon.svg" alt="">
@@ -102,8 +110,11 @@
 					<li>
 						<div class="img-skills">
 							<img src="assets/images/Figma.png" alt="">
-							<span>Figma</span>
 						</div>
+						<div class="skill-title">
+							Figma
+						</div>
+
 						<div class="stars">
 							<img src="assets/icon/star-icon.svg" alt="">
 							<img src="assets/icon/star-icon.svg" alt="">
@@ -124,21 +135,23 @@
 				<h2 class="section-title">Portfolio</h2>
 
 				<ul>
-					<li class="fashion">
+					<li>
 						<img src="assets/images/Fashion-Store.jpg" alt="">
-						<a href="#" target="_blank">
-							Online fashion store -<br> Homepage
-						</a>
+						<span>
+							<a href="#">
+								Online fashion store - Homepage
+							</a>
+						</span>
 					</li>
-					<li class="reebok">
+					<li>
 						<img src="assets/images/reebok_web.jpg" alt="">
-						<a href="#" target="_blank">
+						<a href="#">
 							Reebok Store - Concept
 						</a>
 					</li>
-					<li class="braun">
+					<li>
 						<img src="assets/images/braun-landing.jpg" alt="">
-						<a href="#" target="_blank">
+						<a href="#">
 							Braun Landing Page - Concept
 						</a>
 					</li>
@@ -156,7 +169,7 @@
 		<section class="contacts">
 			<div class="container">
 				<h2 class="section-title">Contacts</h2>
-				<span>Want to know more or just chat?&nbsp; You are welcome!</span>
+				<p>Want to know more or just chat?&nbsp; You are welcome!</p>
 
 
 				<div class="button-wrap">
