Added Shopping List

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 		<a href="04-forms/allforms.html">Додадкове завдання Forms</a>
 	</li>
 	<li>
-		<a href="05-figma Denis Novak/">Denis Novik</a>
+		<a href="05-figma Denis Novak/index.html">Denis Novik</a>
+	</li>
+	<li>
+		<a href="CSS Shopping List/index.html">Shopping List</a>
 	</li>
 </ul>
 
